--- a/package.json
+++ b/package.json
@@ -1,27 +1,12 @@
 {
-  "name": "cloudx-aws",
-  "version": "0.1.0",
-  "bin": {
-    "cloudx-aws": "bin/cloudx-aws.js"
-  },
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "jest",
-    "cdk": "cdk"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/node": "22.5.4",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
-    "aws-cdk": "2.161.1",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.6.2"
-  },
-  "dependencies": {
-    "aws-cdk-lib": "2.161.1",
-    "constructs": "^10.0.0",
-    "source-map-support": "^0.5.21"
-  }
+    "name": "cloudx-aws",
+    "version": "1.0.0",
+    "private": true,
+    "main": "index.js",
+    "scripts": {
+        "build": "npm --prefix ./app/ run build",
+        "dev": "npm --prefix ./app/ run dev",
+        "synth:local": "npm --prefix ./infrastructure/ run synth:local"
+    },
+    "license": "ISC"
 }
