--- a/app/.eslintrc
+++ b/app/.eslintrc
@@ -2,7 +2,7 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "./tsconfig.json"
+    "project": "./app/tsconfig.json"
   },
   "extends": [
     "plugin:@typescript-eslint/recommended",
