--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -9,7 +9,7 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "deploy": "npm run build && cdk deploy"
+    "deploy": "npm run build && cdk deploy --require-approval never"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
