--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npm --prefix ./app/ run build",
-    "dev": "npm --prefix ./app/ run dev",
+    "dev": "npm --prefix ./app/ run start",
     "synth:local": "npm --prefix ./infrastructure/ run synth:local",
     "deploy": "npm --prefix ./infrastructure/ run deploy"
   },
