--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -23,12 +23,15 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.682.0",
+    "@aws-sdk/client-s3": "^3.693.0",
     "@aws-sdk/lib-dynamodb": "^3.687.0",
+    "@aws-sdk/s3-request-presigner": "^3.693.0",
     "@types/aws-lambda": "^8.10.145",
     "@types/uuid": "^10.0.0",
     "aws-cdk-lib": "2.161.1",
     "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0",
+    "csv-parse": "^5.5.6",
     "source-map-support": "^0.5.21",
     "uuid": "^11.0.2",
     "zod": "^3.23.8"
