--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -23,6 +23,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.682.0",
+    "@aws-sdk/client-sns": "^3.699.0",
+    "@aws-sdk/client-sqs": "^3.699.0",
     "@aws-sdk/lib-dynamodb": "^3.687.0",
     "@types/aws-lambda": "^8.10.145",
     "@types/uuid": "^10.0.0",
